--- a/app/src/main/res/layout/fragment_panel.xml
+++ b/app/src/main/res/layout/fragment_panel.xml
@@ -7,7 +7,7 @@
     android:padding="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".fragments.PanelFragment">
 
     <FrameLayout
         android:id="@+id/panelusuario"
@@ -64,29 +64,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/usertrans">
     </ImageView>
-
-    <LinearLayout
-        android:id="@+id/menuInferior"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/rojo_oscuro"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/menu_navuser"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?android:attr/windowBackground"
-            app:itemBackground="@color/rojo_oscuro"
-            app:itemIconTint="@color/white"
-            app:itemTextColor="@color/white"
-            app:menu="@menu/menu_nav"
-            >
-
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
-    </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
