--- a/app/src/main/res/layout/fragment_ajustes.xml
+++ b/app/src/main/res/layout/fragment_ajustes.xml
@@ -57,6 +57,7 @@
                 android:text="Cambio de Contraseña"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:paddingTop="16dp"/>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -139,8 +140,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sesión"
+                android:text=" Cerrar Sesión"
                 android:textSize="18sp"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:paddingTop="16dp"/>
 
